--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An event-driven model layer for JavaScript",
   "main": "lib",
   "scripts": {
-    "coverage": "node_modules/.bin/istanbul cover --hook-run-in-context node_modules/.bin/_mocha -- -R spec",
+    "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover node_modules/.bin/_mocha --",
     "test": "npm run mocha; npm run jshint; npm run jscs",
     "mocha": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "compile": "node_modules/.bin/babel --presets es2015,stage-0 -d lib/ src/",
@@ -25,10 +25,10 @@
   "homepage": "https://github.com/Aloompa/cannery#readme",
   "devDependencies": {
     "babel-cli": "^6.1.18",
+    "babel-istanbul": "^0.5.9",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
-    "istanbul": "^0.4.0",
     "jscs": "^2.5.1",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3",
