--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack": "^1.12.6"
   },
   "dependencies": {
+    "cannery-adapter": "^1.0.0",
     "cannery-event-emitter": "^1.0.1",
     "debug": "^2.2.0",
     "lodash.clone": "^3.0.3",
