--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An event-driven model layer for JavaScript",
   "main": "lib",
   "scripts": {
-    "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover node_modules/.bin/_mocha --",
+    "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover -x '**/__tests__/*.spec.js' node_modules/.bin/_mocha --",
     "test": "npm run mocha; npm run jshint; npm run jscs",
     "mocha": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "compile": "node_modules/.bin/babel --presets es2015,stage-0 -d lib/ src/",
