--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An event-driven model layer for JavaScript",
   "main": "lib",
   "scripts": {
-    "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover -x '**/__tests__/*.spec.js' node_modules/.bin/_mocha --",
+    "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover -x '**/__tests__/*' node_modules/.bin/_mocha --",
     "test": "npm run mocha; npm run jshint; npm run jscs",
     "mocha": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "compile": "node_modules/.bin/babel --presets es2015,stage-0 -d lib/ src/",
@@ -38,10 +38,6 @@
   "dependencies": {
     "cannery-adapter": "^1.0.0",
     "cannery-event-emitter": "^1.0.1",
-    "debug": "^2.2.0",
-    "lodash.clone": "^3.0.3",
-    "lodash.defer": "^3.1.0",
-    "lodash.has": "^3.2.1",
     "valid-point": "^1.0.1"
   }
 }
