--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cannery",
   "version": "0.0.1",
   "description": "An event-driven model layer for JavaScript",
-  "main": "lib",
+  "main": "src",
   "scripts": {
     "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover -x '**/__tests__/*' node_modules/.bin/_mocha --",
     "test": "npm run mocha; npm run jshint; npm run jscs",
