--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "cannery-adapter": "^1.0.0",
     "cannery-event-emitter": "^1.0.1",
+    "lodash.debounce": "^4.0.0",
     "valid-point": "^1.0.1"
   }
 }
