--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "homepage": "https://github.com/Aloompa/cannery#readme",
   "devDependencies": {
     "babel-cli": "^6.1.18",
+    "babel-core": "^6.5.2",
     "babel-istanbul": "^0.5.9",
     "babel-loader": "^6.1.0",
+    "babel-plugin-syntax-flow": "^6.5.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "jscs": "^2.5.1",
@@ -39,6 +41,8 @@
   "dependencies": {
     "cannery-adapter": "^1.0.0",
     "cannery-event-emitter": "^1.0.1",
+    "flux": "^2.1.1",
+    "immutable": "^3.7.6",
     "lodash.debounce": "^4.0.0",
     "lodash.isequal": "^4.0.0",
     "valid-point": "^1.0.1"
