--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "lib",
   "scripts": {
     "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover -x '**/__tests__/*' node_modules/.bin/_mocha --",
-    "test": "npm run mocha; npm run jshint; npm run jscs",
+    "test": "npm run mocha",
     "mocha": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "compile": "node_modules/.bin/babel --presets es2015,stage-0 -d lib/ src/",
     "build": "./node_modules/.bin/webpack",
     "prepublish": "npm run test; npm run compile; npm run build",
-    "jscs": "./node_modules/.bin/jscs src --esnext",
-    "jshint": "./node_modules/.bin/jshint src --verbose",
     "watch": "node_modules/.bin/_mocha --watch --compilers js:babel-core/register"
   },
   "repository": {
@@ -26,12 +24,12 @@
   "homepage": "https://github.com/Aloompa/cannery#readme",
   "devDependencies": {
     "babel-cli": "^6.1.18",
+    "babel-core": "^6.5.2",
     "babel-istanbul": "^0.5.9",
     "babel-loader": "^6.1.0",
+    "babel-plugin-transform-flow-strip-types": "^6.5.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
-    "jscs": "^2.5.1",
-    "jshint": "^2.8.0",
     "mocha": "^2.3.3",
     "questy": "^1.1.0",
     "webpack": "^1.12.6"
