--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cannery-event-emitter": "^1.0.1",
     "lodash.debounce": "^4.0.0",
     "lodash.isequal": "^4.0.0",
+    "request": "^2.69.0",
     "valid-point": "^1.0.1"
   }
 }
