--- a/src/.flowconfig
+++ b/src/.flowconfig
@@ -4,6 +4,8 @@
 ../node_modules/valid-point
 ../node_modules/cannery-event-emitter
 ../node_modules/lodash.debounce
+../node_modules/lodash.snakecase
+../node_modules/pluralize
 
 [libs]
 
