--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cannery",
-  "version": "1.0.0",
+  "version": "2.0.0-0",
   "description": "An event-driven model layer for JavaScript",
   "main": "lib",
   "scripts": {
