--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cannery",
-  "version": "2.0.1",
+  "version": "2.0.2-0",
   "description": "An event-driven model layer for JavaScript",
   "main": "lib",
   "scripts": {
