--- a/src/.flowconfig
+++ b/src/.flowconfig
@@ -6,7 +6,7 @@
 ../node_modules/lodash.debounce
 ../node_modules/lodash.snakecase
 ../node_modules/pluralize
-../node_modules/request
+../node_modules/then-request
 
 [libs]
 
