--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "lib",
   "scripts": {
     "coverage": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover -x '**/__tests__/*' node_modules/.bin/_mocha --",
-    "test": "npm run mocha",
+    "test": "npm run mocha; npm run flow",
     "mocha": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "compile": "node_modules/.bin/babel --presets es2015,stage-0 -d lib/ src/",
     "build": "./node_modules/.bin/webpack",
     "prepublish": "npm run test; npm run compile; npm run build",
     "watch": "node_modules/.bin/_mocha --watch --compilers js:babel-core/register",
-    "mocha-debug": "./node_modules/.bin/mocha --compilers js:babel-core/register --debug-brk"
+    "mocha-debug": "./node_modules/.bin/mocha --compilers js:babel-core/register --debug-brk",
+    "flow": "cd src; flow; test $? -eq 0 -o $? -eq 2"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.5.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
+    "flow-bin": "^0.22.1",
     "mocha": "^2.3.3",
     "questy": "^1.1.0",
     "webpack": "^1.12.6"
